<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:fillViewport="true"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:context="com.mediax.mediaxapp.activity.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/label_Mediax"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_xxlarge"/>

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edittext_start"
            android:drawableLeft="@drawable/ic_icon_profie_pic"
            android:hint="@string/hint_editText_full_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <EditText
            android:id="@+id/editOfficialEmailId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/ic_icon_email"
            android:hint="@string/hint_editText_Official_mail_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/ic_icon_password"
            android:hint="@string/hint_editText_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <AutoCompleteTextView
            android:id="@+id/autoCompleteCompanyName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/ic_icon_company"
            android:hint="@string/hint_editText_company_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <Spinner
            android:id="@+id/spinnerIndustryType"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:paddingLeft="@dimen/margin_xlarge"></Spinner>


        <EditText
            android:id="@+id/editBrand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/ic_icon_brand"
            android:hint="@string/hint_editText_brand_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <EditText
            android:id="@+id/editDesignation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/ic_icon_designation"
            android:hint="@string/hint_editText_designation_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <EditText
            android:id="@+id/editLinkedinProfileLink"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/icon_link"
            android:hint="@string/hint_editText_linkedin_profile_link"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <EditText
            android:id="@+id/editMobileNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_edit_bg_middle"
            android:drawableLeft="@drawable/ic_icon_mobile"
            android:hint="@string/hint_editText_mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <Spinner
            android:id="@+id/spinnerZone"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_bg_edittext_end"
            android:paddingLeft="@dimen/margin_xlarge"></Spinner>


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_button_circular"
            android:text="@string/label_button_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"/>
    </LinearLayout>
</ScrollView>
