<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:fillViewport="true"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:context="com.mediax.mediaxapp.activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_medium"
            android:text="@string/label_Mediax"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_xxlarge"/>

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_xXlarge"
            android:background="@drawable/icon_edittext_start"
            android:drawableLeft="@drawable/ic_icon_profie_pic"
            android:drawablePadding="20dp"
            android:hint="@string/hint_editText_user_name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_bg_edittext_end"
            android:drawableLeft="@drawable/ic_icon_password"
            android:drawablePadding="20dp"
            android:hint="@string/hint_editText_login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>


        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_button_circular"
            android:text="@string/label_button_signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"/>


        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_medium"
            android:text="@string/label_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"/>

    </LinearLayout>

</ScrollView>
