<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="80dp"
              android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xXXlarge"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/editUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/edittext_sign_up_text_color"/>

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/bg_text_area"
        android:capitalize="words"
        android:gravity="top"
        android:hint="@string/hint_message"
        android:imeOptions="actionDone"
        android:paddingLeft="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:singleLine="false"
        android:textColor="@color/edittext_sign_up_text_color"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_xXlarge"
        android:background="@drawable/bg_button_circular"
        android:text="@string/label_button_send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"/>

</LinearLayout>
